# s3proxy

./: Dockerfile  README.md  docker-compose.yml  haproxy.cfg  main.py  pyproject.toml  readme.md  requirements.txt  sign_s3.py  signature_helpers.py
.github/workflows/: docker-build.yaml
